# drone_position

install/: local_setup.sh  setup.sh
install/altitude/lib/altitude/: altitude
install/altitude/share/altitude/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/drone_msgs/share/drone_msgs/: local_setup.sh  (+2 more)
log/: latest_build
src/altitude/: setup.cfg  setup.py
src/altitude/altitude/: altitude_node.py
src/aruco_detector/: package.xml  setup.py
src/aruco_detector_node/: setup.cfg  setup.py
src/aruco_detector_node/aruco_detector_node/: aruco_detector.py
src/config/: aruco_whitelist_field.yaml  camera_params.yaml  field.yaml
src/drone_msgs/: CMakeLists.txt
src/drone_msgs/msg/: ArucoDetectionArray.msg
src/drone_utils/: package.xml  setup.cfg  setup.py
src/global_position/: setup.cfg  setup.py
src/global_position/global_position/: global_position_node.py
src/global_position_node/: setup.cfg  setup.py
src/global_position_node/global_position_node/: global_position.py
src/image_preprocessor/: package.xml  setup.py
src/marker_pose_estimator/: setup.cfg  setup.py
src/position_fusion/: setup.cfg  setup.py
src/position_fusion/position_fusion/: position_fusion_node.py
src/project_start/: package.xml  setup.cfg  setup.py
src/px4/: package.xml  setup.py
src/px4/px4/: px4.py
src/rangefinder/: package.xml  setup.cfg  setup.py
src/rangefinder/rangefinder/: rangefinder_node.py
src/uav_camera/: CMakeLists.txt  package.xml
src/uav_camera/src/: camera_publisher.cpp
src/visual/: package.xml  setup.py
(+141 files in other folders)
